--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-connect": "^5.7.0",
     "gulp-html-extend": "^1.1.6",
-    "gulp-sass": "^4.0.2"
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "postcss-px-to-viewport": "^1.1.1"
   },
   "browserslist": [
     "last 2 versions"
