--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-connect": "^5.7.0",
     "gulp-html-extend": "^1.1.6",
     "gulp-postcss": "^8.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-collector": "^1.3.3",
     "gulp-sass": "^4.0.2",
     "postcss-px-to-viewport": "^1.1.1"
   },
