--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.26.12",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-connect": "^5.7.0",
@@ -24,6 +25,7 @@
     "gulp-rev": "^9.0.0",
     "gulp-rev-collector": "^1.3.3",
     "gulp-sass": "^4.0.2",
+    "gulp-webserver": "^0.9.1",
     "postcss-px-to-viewport": "^1.1.1"
   },
   "browserslist": [
